syncevolution (1:1.2.1-1) unstable; urgency=low

  * SyncEvolution 1.2.1 for Harmattan.
  * Updated KCalExtended and QtContacts backends for new
    insertItem() signature.
  * Packaging updates for Fremantle merged into Harmattan tree.

 -- Ove Kaaven <ovek@arcticnet.no>  Tue, 29 Nov 2011 01:59:36 +0100

syncevolution (1:1.1.99.6-2) unstable; urgency=low

  * Removed static libraries.
  * On Harmattan, re-enable iCal 2.0 UID comparisons.
  * On Harmattan, don't try to sync the fake "self" contact.

 -- Ove Kaaven <ovek@arcticnet.no>  Wed, 07 Sep 2011 23:59:44 +0200

syncevolution (1:1.1.99.6-1) unstable; urgency=low

  * SyncEvolution 1.1.99.6 for Maemo.

 -- Ove Kaaven <ovek@arcticnet.no>  Sun, 04 Sep 2011 20:42:32 +0200

syncevolution (1:1.1.99.5-1) unstable; urgency=low

  * SyncEvolution 1.1.99.5 for Maemo.
    - Built with WebDAV support.
  * Build-Depend on libneon27-gnutls-dev.
  * Depend on host (used by WebDAV backend for DNS SRV lookups).
  * Updated package description:
    - SyncEvolution now supports CalDAV/CardDAV.
    - Remove mention of ScheduleWorld, as the service shut down.
    - Mention Ovi instead, since this package is for a Nokia device.
    - Mention Google, since CalDAV is finally supported.

 -- Ove Kaaven <ovek@arcticnet.no>  Sun, 19 Jun 2011 17:40:57 +0200

syncevolution (1:1.1.1-1) unstable; urgency=low

  * SyncEvolution 1.1.1 for Maemo.
    - Has workaround for Nokia's calendar backend not understanding
      the timezone format of ical 2.0.
  * Added handling of contact photos.

 -- Ove Kaaven <ovek@arcticnet.no>  Sat, 05 Feb 2011 00:04:47 +0100

syncevolution (1:1.0-1) unstable; urgency=low

  * SyncEvolution 1.0 for Maemo.
    - Not built with Bluetooth support, since that's handled by
      Nokia's own on-device software.
    - Not built with D-Bus support, since that does not interact
      with Nokia's Internet Connectivity Daemon (ICD). For the
      time being, autosync is best handled by syncevolution-frontend.
